--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
             <div class="wrapper">
                 <h1>atomic design</h1>
-                <div class="row col-center">
+                <div class="col-sm-12 col-lg-4">
                     <p>We're not designing pages, we're designing systems of components.</p>
                 </div>
             </div>
@@ -112,14 +112,14 @@
                 </header>
 
                 <div class="row">
-                    <section>
+                    <section class="col-sm-12 col-lg-4">
                         <header>
                             <h3>templates</h3>
                         </header>
                         <p><b>Templates are very concrete and provide context to all these relatively abstract molecules and organisms.</b> Templates are also where clients start seeing the final design in place. In my experience working with this methodology, templates begin their life as HTML wireframes, but over time increase fidelity to ultimately become the final deliverable.</p>
                     </section>
                     
-                    <section>
+                    <section class="col-sm-12 col-lg-4">
                         <header>
                             <h3>pages</h3>
                         </header>
@@ -130,9 +130,7 @@
         </div>
 
         <section class="row" id="testing">
-            <div class="col-lg-5">
-                <img src="img/balloon-rainbow.jpg" alt="ding-logo" data-rjs="2">
-            </div>
+            <div class="col-lg-5"></div>
             <div class="col-sm-12 col-lg-7">
                 <header>
                     <h2>testing the system</h2>
@@ -145,7 +143,7 @@
 
         <section id="benefits">
             <div class="row col-center">
-                <header>
+                <header class="col-sm-12 col-lg-8">
                     <h2>benefits</h2>
                     <p>Atomic design can require considerably more thought and planning, but it's often worth the extra effort. So what are the main benefits of it?</p>
                 </header>
@@ -193,11 +191,11 @@
                 </ul>
             </nav>
             
-            <div class="col-sm-12 col-lg-2">
-                <img src="img/logo-ding.jpg" alt="" data-rjs="2">
+            <section class="col-sm-12 col-lg-2">
+                <img src="img/logo-ding.jpg" alt="ding-logo" data-rjs="2">
                 <h4>Atomic Design</h4>
                 <p><a href="https://bradfrost.com/blog/post/atomic-web-design/"></a>By Brad Frost</p>
-            </div>
+            </section>
         </div>
     </footer>
   
