--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <section class="row col-sm-12 col-lg-4">
                     <div class="col-sm-2 col-lg-12">
-                        <i class="fa-solid fa-bacterium"></i>
+                        <i class="fa-solid fa-bacteria"></i>
                     </div>
                     <div class="col-sm-10 col-lg-12">
                         <header>
@@ -112,14 +112,14 @@
                 </header>
 
                 <div class="row">
-                    <section class="col-sm-12 col-lg-4">
+                    <section class="col-sm-12 col-lg-6">
                         <header>
                             <h3>templates</h3>
                         </header>
                         <p><b>Templates are very concrete and provide context to all these relatively abstract molecules and organisms.</b> Templates are also where clients start seeing the final design in place. In my experience working with this methodology, templates begin their life as HTML wireframes, but over time increase fidelity to ultimately become the final deliverable.</p>
                     </section>
                     
-                    <section class="col-sm-12 col-lg-4">
+                    <section class="col-sm-12 col-lg-6">
                         <header>
                             <h3>pages</h3>
                         </header>
@@ -135,7 +135,7 @@
                 <header>
                     <h2>testing the system</h2>
                 </header>
-                <p>The page stage is essential as it's where we test the effectiveness of the design system. Viewing everything in context allows us to loop back to modify our molecules, organisms, and templates to better address the real context of the design.</p>
+                <p>The page stage is essential as it's where we test the effectiveness of the design system. Viewing everything in context allows us to loop back to modify our molecules, organisms, and templates to better address the real context of the design.</p><br>
                 
                 <p>Pages are also the place to test variations in templates. For example, you might want to articulate what a headline containing 40 characters looks like, but also demonstrate what 340 characters looks like. What does it look like when a user has one item in their shopping cart versus 10 items with a discount code applied? Again, these specific instances influence how we loop back through and construct our system.</p>
             </div>
@@ -158,7 +158,7 @@
                         <header>
                             <h3>design</h3>
                         </header>
-                        <p><b>Building a component-based system</b> &mdash; When we are breaking down our components into basic atoms, it becomes easier to see what atoms can be combined or mixed and matched to form other molecules or organisms. It helps us to navigate between atomic parts and the whole of our UIs.</p>
+                        <p><b>Building a component-based system</b> &mdash; When we are breaking down our components into basic atoms, it becomes easier to see what atoms can be combined or mixed and matched to form other molecules or organisms. It helps us to navigate between atomic parts and the whole of our UIs.</p><br>
 
                         <p><b>Style guide creation becomes simple</b> &mdash; Applying the atomic design principles from the get-go, which means that all the atoms and molecules are created before the site is built, you can incorporate all your atoms and molecules into your style guide. This keeps your design consistent across platforms.</p>
                     </div>
@@ -166,13 +166,13 @@
 
                 <section class="row col-sm-12 col-lg-6">
                     <div class="col-sm-12 col-lg-2">
-                        <i class="fa-solid fa-code"></i>
+                        <i class="fa-sharp fa-solid fa-code"></i>
                     </div>
                     <div class="col-sm-12 col-lg-10">
                         <header>
                             <h3>development</h3>
                         </header>
-                        <p><b>Easy-to-read code that is more consistent</b> &mdash; The code of 'atomically' designed websites is typically much easier to read than one created a more traditional way. Consistency is given when you use predefined atoms in order to create the site layout. It makes it easy to see which components are being used for different parts of the site. This reduces the tendency of duplicate code on the site.</p>
+                        <p><b>Easy-to-read code that is more consistent</b> &mdash; The code of 'atomically' designed websites is typically much easier to read than one created a more traditional way. Consistency is given when you use predefined atoms in order to create the site layout. It makes it easy to see which components are being used for different parts of the site. This reduces the tendency of duplicate code on the site.</p><br>
 
                         <p><b>Faster Prototyping and updating</b> &mdash; By having a defined list of atoms before the creation process begins eventually means that you can mock-up pages quickly and easily. You simply pick and combine the required elements for the site. If an update is necessary, only one atom, molecule or organism is changed at a time. This simplifies any updates to a component that is carried out across to all other instances.</p>
                     </div>
