--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <div class="wrapper row">
                 <div class="col-sm-12 col-lg-6">
-                    <img src="img/logo-ding.jpg" alt="ding-logo" data-rjs="2">
+                    <img src="img/logo-ding.jpg" alt="ding" data-rjs="2">
                 </div>
                 <nav class="col-sm-12 col-lg-6">
                     <ul>
@@ -192,9 +192,9 @@
             </nav>
             
             <section class="col-sm-12 col-lg-2">
-                <img src="img/logo-ding.jpg" alt="ding-logo" data-rjs="2">
+                <img src="img/logo-ding.jpg" alt="ding" data-rjs="2">
                 <h4>Atomic Design</h4>
-                <p><a href="https://bradfrost.com/blog/post/atomic-web-design/"></a>By Brad Frost</p>
+                <p>By Brad Frost</p>
             </section>
         </div>
     </footer>
