--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <section class="row col-sm-12 col-lg-4">
                     <div class="col-sm-2 col-lg-12">
-                        <i class="fa-solid fa-dna"></i>
+                        <i class="fa-sharp fa-solid fa-dna"></i>                    
                     </div>
 
                     <div class="col-sm-10 col-lg-12">
