--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </main>
     <footer>
         <div class="wrapper row">
-            <nav class="col-sm-12 col-lg-10">
+            <nav class="col-sm-12 col-md-8 col-lg-10">
                 <ul>
                     <li><a href="#systems">Systems</a></li>
                     <li><a href="#layout">Layout</a></li>
@@ -191,7 +191,7 @@
                 </ul>
             </nav>
             
-            <section class="col-sm-12 col-lg-2">
+            <section class="col-sm-12 col-md-4 col-lg-2">
                 <img src="img/logo-ding.jpg" alt="ding" data-rjs="2">
                 <h4>Atomic Design</h4>
                 <p>By Brad Frost</p>
